theme.css
:root {
  --dark: #011627;
  --light: #D8D8F6;
}

* {
  overscroll-behavior: contain;
  padding: 0;
  margin: 0;
  outline: 0;
  overflow: hidden;
}

button {
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;

  background-color: var(--light);
  color: var(--dark);
  border: 0.1em solid var(--light);
  border-radius: 0.25em;
  font-size: 1.3em;
  margin: 0.2em 0.2em 0 0;

  cursor: pointer;

  min-width: 1.5em;
  min-height: 2em;
  padding: 0.2em 0.5em;
}

button:hover {
  background-color: var(--dark);
  color: var(--light);
}

ul {
  padding: 0;
  margin: 0.5em 0 0 0;
  display: grid;
}

[hidden]{
  display:none;
}

.toolbar {
  top: 1em;
  left: 1em;
  position: absolute;
  display: grid;
}

.buttons {
  display: flex;
}

html, body {
  background-color: var(--dark);
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#map_container {
  width: 100%;
  height: 100%;
}

#map_zoomable {
  transform-origin: 0px 0px;
  transform: scale(1) translate(0px, 0px);
  cursor: grab;
}

div#map_zoomable > img, canvas{
  width: 100%;
  height: auto;
}

#map_image {
  image-rendering: pixelated;
  pointer-events: none;
  user-select: none;
}

#canvas {
  image-rendering: pixelated;
  width: 100%;
  height: 100%;
}

